--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
+    "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-localstorage": "^0.4.1",
+    "redux-observable": "^0.17.0",
+    "rxjs": "^5.5.6",
     "webpack-dev-server": "^2.9.3"
   },
   "scripts": {
@@ -41,9 +44,11 @@
     "eslint-plugin-jsx-control-statements": "^2.2.0",
     "eslint-plugin-react": "^7.4.0",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.8",
     "react-hot-loader": "^3.1.1",
-    "webpack": "^3.8.1",
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.10.0",
     "webpack-config": "^7.5.0"
   }
 }
